dtugi commit dodano style i tytul

--- a/rules.html
+++ b/rules.html
@@ -3,3 +3,4 @@ git add - dodaje do staging area
 git rm --cached - usuwa z staging
 git add . - dodaje wszystkie zmienione pliki do staging
 git status -pokazuje pliki zmienione i w staging
+git commit -m "message" - zatwierdzenie zmian z wiadomoscia "message"
