--- a/rules.html
+++ b/rules.html
@@ -4,3 +4,5 @@ git rm --cached - usuwa z staging
 git add . - dodaje wszystkie zmienione pliki do staging
 git status -pokazuje pliki zmienione i w staging
 git commit -m "message" - zatwierdzenie zmian z wiadomoscia "message"
+git log - historia zatwierdzen
+git log --oneline - historia w skróconej wersji
