--- a/rules.html
+++ b/rules.html
@@ -18,3 +18,5 @@ git checkout nazwa -przelącza nas na konkretna galąź
 git branch -D nazwa - usuwa galąź
 git merge nazwaDolaczanejGalęzi - laczy wskazana galaz z ta na ktorej aktualnie jesteśmy
 :wq - pozwala nam wyjść z niefajnie wyglądających powiadomień np. przy konflikcie galęzi
+git push url nazwaGalęzi - przesyla wersje na url np github
+git remote add origin url - dodaje url pod haslo np. origin
